footer y vista covid

--- a/covid.html
+++ b/covid.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Covid-19</title>
+    <title>INFO</title>
   </head>
   <body>
     <!--HEADER-->
@@ -19,48 +19,23 @@
         <h1 class="mr-auto">COVID-19</h1>
       </nav>
       <nav id="menu" class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="#">Coronavirus</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#covid">Que es</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#sintomas">Sintomas</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" href="#cuidados">Cuidados</a>
-           </li>
-           <li class="nav-item">
-              <a class="nav-link" href="#colombia">Colombia</a>
-           </li>
-          </ul>
-        </div>
+        <a class="navbar-brand" href="index.html">Home</a>
       </nav>
     <!--/HEADER-->
 
     <!--main-->
     <main id="main">
-      <section id="covid">
+      <section id="coronavirus2">
         <div class="container-fluid pb-3">
           <div class="row">
             <div class="col-12 col-md-6">
-              <h2>Que es el COVID-19</h2>
+              <h2>Que es un coronavirus</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <div class="offset-8 pb-2">
-                <a href="covid.html" class="btn btn-primary">Ver más</a>
-              </div>
             </div>
             <div class="col-12 col-md-6">
               <img src="https://www.sociedadcirugiaocular.com/images/img-coronavirus-covid19.jpg">
@@ -69,13 +44,10 @@
         </div>
       </section>
 
-      <section id="sintomas">
+      <section id="covid2">
         <div class="container-fluid pt-3 pb-3">
           <div class="row">
-            <div class="col-12 col-md-6">
-              <img src="https://www.65ymas.com/uploads/s1/41/61/97/bigstock-lung-virus-infection-and-coron-350084953.jpeg">
-            </div>
-            <div class="col-12 col-md-6">
+            <div class="col-12">
               <h2>Que es el COVID-19</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -83,55 +55,28 @@
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <div class="offset-8 pb-2">
-                <a href="covid.html" class="btn btn-primary">Ver más</a>
-              </div>
             </div>
           </div>
         </div>
       </section>
 
-      <section id="cuidados">
+      <section id="sintomas2">
         <div class="container-fluid pb-3">
           <div class="row">
-            <div class="col-12 col-md-6">
-              <h2>Como nos podemos cuidar</h2>
+            <div class="col-12">
+              <h2>¿Cuales son los sintomas?</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <div class="offset-8 pb-2">
-                <a href="covid.html" class="btn btn-primary">Ver más</a>
-              </div>
-            </div>
-            <div class="col-12 col-md-6">
-              <img src="https://www.mysanitas.com/sites/default/files/articles/img-blog-coronavirus_0.jpg">
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="colombia">
-        <div class="container-fluid pt-3 pb-3">
-          <div class="row">
-            <div class="col-12 col-md-6">
-              <img src="https://coronaviruscolombia.gov.co/Covid19/images/comportamientoCovid/bannerCifrasMobile.png">
-            </div>
-            <div class="col-12 col-md-6">
-              <h2>COVID-19 en Colombia</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <div class="offset-8 pb-2">
-                <a href="" class="btn btn-primary">Casos</a>
-                <a href="https://coronaviruscolombia.gov.co/Covid19/estadisticas-covid-
-                19/comportamiento-covid-19.html" class="btn btn-primary">Ver más</a>
-              </div>
             </div>
           </div>
         </div>
@@ -139,7 +84,7 @@
     </main> 
     <!--/main-->
 
-    <!--Footer-->
+        <!--Footer-->
       <footer id="footer">
         <div class="container">
           <div class="row">
